# nvidia-converge

./: .gitignore  README.md  nvidia-converge  pyproject.toml
.github/workflows/: ci.yml  gpu-integration.yml  release.yml
docs/: integration-testing.md
examples/: compute-580-open.yaml
integrations/: results.example.json
nvidia_converge/: __init__.py  audit.py  cli.py  desired.py  doctor.py  human.py  models.py  planner.py  report.py  rollback.py  runner.py  support.py  verify.py
nvidia_converge/schemas/: __init__.py  desired.schema.json  integration-results.schema.json  report.schema.json  validation.schema.json
schemas/: desired.schema.json  report.schema.json
tests/: run_tests.py  test_audit.py  test_cli.py  test_desired.py  test_doctor.py  test_planner.py  test_rollback.py  test_schemas.py  test_verify.py  test_workflows.py
