[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-converge"
version = "0.1.0"
description = "Node-level NVIDIA driver stack reconciler"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "nvidia-converge contributors" }]
dependencies = []

[project.optional-dependencies]
test = ["jsonschema>=4", "pytest>=8", "ruff>=0.4"]

[project.scripts]
nvidia-converge = "nvidia_converge.cli:main"

[tool.setuptools.packages.find]
include = ["nvidia_converge*"]

[tool.setuptools.package-data]
nvidia_converge = ["schemas/*.schema.json"]

[tool.ruff]
target-version = "py310"
