[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-converge"
version = "0.1.0"
description = "Node-level NVIDIA driver stack reconciler"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "nvidia-converge contributors" }]
dependencies = []

[project.optional-dependencies]
test = ["jsonschema>=4", "mypy>=1.10", "pytest>=8", "ruff>=0.4"]

[project.scripts]
nvidia-converge = "nvidia_converge.cli:main"

[tool.setuptools.packages.find]
include = ["nvidia_converge*"]

[tool.setuptools.package-data]
nvidia_converge = ["py.typed", "schemas/*.schema.json"]

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
